--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     </head> 
     <body style="margin: 20">
         <h3><b>Студент групи ПОЦТ-23м - Богославський Іісус Кирилович</b></h1>
-        <ul>
-            <li><a href="https://bohoslavskiy.github.io/bohoslavskiy/hw1/">Завдання №1</a></li>;
-            <li><a href="https://bohoslavskiy.github.io/bohoslavskiy/hw2/">Завдання №2</a></li>;
-        </ul>
+        <ol>
+            <li><a href="https://bohoslavskiy.github.io/bohoslavskiy/hw1/">Завдання №1</a></li>
+            <li><a href="https://bohoslavskiy.github.io/bohoslavskiy/hw2/">Завдання №2</a></li>
+        </ol>
     </body>
 </html>
